[gd_scene load_steps=37 format=2]

[ext_resource path="res://assets/Tiles/tile_0004.png" type="Texture" id=1]
[ext_resource path="res://assets/Animations/EnemyTakeDamage.tres" type="Animation" id=2]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/Particles/magic_04.png" type="Texture" id=4]
[ext_resource path="res://assets/Animations/bow-Sheet.png" type="Texture" id=5]
[ext_resource path="res://assets/Tiles/tile_0004_blue.png" type="Texture" id=6]
[ext_resource path="res://assets/Particles/scratch_01.png" type="Texture" id=7]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 0.1

[sub_resource type="Gradient" id=28]
offsets = PoolRealArray( 0.771739, 1 )
colors = PoolColorArray( 1, 1, 1, 0.054902, 0, 0, 0, 0.0392157 )

[sub_resource type="GradientTexture" id=29]
gradient = SubResource( 28 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 29 )

[sub_resource type="Gradient" id=27]
offsets = PoolRealArray( 0.771739, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 0.0392157 )

[sub_resource type="GradientTexture" id=30]
gradient = SubResource( 27 )

[sub_resource type="ParticlesMaterial" id=25]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.02
color_ramp = SubResource( 30 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 28 )

[sub_resource type="ParticlesMaterial" id=26]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 3 )

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 1, 0.3, 0 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 6 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "aim",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 3, 2 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( -1, -4, 1, -4, 4, -1, 4, 2, 2, 4, -2, 4, -4, 2, -4, -1 )

[sub_resource type="Animation" id=16]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, -5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.02, 1.05 ) ]
}

[sub_resource type="Gradient" id=17]
offsets = PoolRealArray( 0.163043, 0.391304, 0.652174, 0.952899 )
colors = PoolColorArray( 1, 0, 0, 0, 0.12549, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=18]
gradient = SubResource( 17 )

[sub_resource type="Curve" id=19]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0.00617284, 103.739 ), 0.0, 0.0, 0, 0, Vector2( 0.262346, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.623457, -93.7161 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=20]
curve = SubResource( 19 )

[sub_resource type="Curve" id=21]
_data = [ Vector2( 0, 0.100282 ), 0.0, 0.0, 0, 0, Vector2( 0.632716, 0.613795 ), 0.0, 0.0, 0, 0, Vector2( 0.978395, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=22]
curve = SubResource( 21 )

[sub_resource type="ParticlesMaterial" id=23]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel_curve = SubResource( 20 )
scale = 0.01
scale_curve = SubResource( 22 )
color_ramp = SubResource( 18 )

[sub_resource type="CircleShape2D" id=24]
radius = 7.39269

[node name="Player" type="RigidBody2D" groups=[
"player",
]]
collision_mask = 5
mode = 2
physics_material_override = SubResource( 1 )
linear_damp = 10.0
script = ExtResource( 3 )

[node name="DashParticles" type="Particles2D" parent="."]
visible = false
position = Vector2( 0, -4 )
emitting = false
amount = 50
lifetime = 0.4
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 1 )

[node name="DashParticles2" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.0235294 )
position = Vector2( 0.0241318, 0.00571346 )
emitting = false
amount = 500
lifetime = 0.5
local_coords = false
process_material = SubResource( 25 )
texture = ExtResource( 7 )

[node name="FullScreenScratch" type="Particles2D" parent="."]
position = Vector2( 0, -4 )
emitting = false
amount = 50
lifetime = 0.2
local_coords = false
process_material = SubResource( 26 )
texture = ExtResource( 7 )

[node name="StepParticles" type="Node2D" parent="."]
position = Vector2( 0, -3 )

[node name="Left" type="Particles2D" parent="StepParticles"]
position = Vector2( -1, 3 )
local_coords = false
process_material = SubResource( 7 )

[node name="Right" type="Particles2D" parent="StepParticles"]
position = Vector2( 1, 3 )
local_coords = false
process_material = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 6 )

[node name="BowSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4.2 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 13 )
animation = "aim"
offset = Vector2( 1, -1 )

[node name="MoveShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -1 )
shape = SubResource( 14 )

[node name="DamageDetector" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -4 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageDetector"]
shape = SubResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walk = SubResource( 16 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="ColorAnimationPlayer" type="AnimationPlayer" parent="."]
anims/EnemyTakeDamage = ExtResource( 2 )

[node name="PullParticles" type="Particles2D" parent="."]
position = Vector2( 0, -3 )
scale = Vector2( 2, 2 )
emitting = false
amount = 50
process_material = SubResource( 23 )
texture = ExtResource( 4 )

[node name="PickArea" type="Area2D" parent="."]
visible = false
collision_layer = 64
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickArea"]
position = Vector2( 0, -2.71312 )
shape = SubResource( 24 )
[connection signal="body_entered" from="DamageDetector" to="." method="_on_DamageDetector_body_entered"]
[connection signal="body_entered" from="PickArea" to="." method="_on_PickArea_body_entered"]
